fix: webm videos on ios doesnt showed

--- a/src/index.css
+++ b/src/index.css
@@ -775,3 +775,7 @@ video {
   height: auto;
   object-fit: cover;
 }
+
+video {
+  object-fit: contain;
+}
